Keep app running on close if systray enabled.

--- a/AUTHORS
+++ b/AUTHORS
@@ -61,6 +61,7 @@ Further patches have been submitted by:
   Michal Novotny <minovotn-at-redhat-dot-com>
   Paul W. Frields <stickster-at-gmail-dot-com>
   Fred Leeflang <fredl-at-dutchie-dot-org>
+  Jon Nordby <jononor-at-gmail-dot-com>
 
   <...send a patch & get your name here...>
 
