manager: Add 'delete' option to the VM context menu.

--- a/AUTHORS
+++ b/AUTHORS
@@ -62,6 +62,7 @@ Further patches have been submitted by:
   Paul W. Frields <stickster-at-gmail-dot-com>
   Fred Leeflang <fredl-at-dutchie-dot-org>
   Jon Nordby <jononor-at-gmail-dot-com>
+  Ales Zelinka <azelinka-at-redhat.com>
 
   <...send a patch & get your name here...>
 
