Prep for release (Update NEWS, translations, configure...)

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,19 @@
  Virtual Machine Manager News
  ============================
 
+Release 0.8.1 (December 3rd, 2009)
+----------------------------------
+
+ - VM Migration wizard, exposing various migration options
+ - Enumerate CDROM and bridge devices on remote connections
+ - Can once again list multiple graphs in main manager window (Jon Nordby)
+ - Support disabling dhcp (Michal Novotny), and specifying 'routed' type for
+        new virtual networks
+ - Support storage pool source enumeration for LVM, NFS, and SCSI
+ - Allow changing VM ACPI, APIC, clock offset, individual vcpu pinning,
+        and video model (vga, cirrus, etc.)
+ - Many improvements and bugfixes
+
 Release 0.8.0 (July 28th, 2009)
 -------------------------------
 
